crates/nirvash-macros/tests/fixtures/derive_signature_invalid_filter.stderr
error: expected `self`
 --> tests/fixtures/derive_signature_invalid_filter.rs:4:30
  |
4 | #[finite_model_domain(filter(value => value.ready))]
  |                              ^^^^^
