crates/nirvash-macros/tests/fixtures/derive_signature_invalid_filter.rs
use nirvash_macros::FiniteModelDomain;

#[derive(Clone, Debug, PartialEq, Eq, FiniteModelDomain)]
#[finite_model_domain(filter(value => value.ready))]
struct InvalidFilter {
    ready: bool,
}

fn main() {}
